changed base64 encoding class